docs: add usage for java 17; fix urls